package edu.fiuba.algo3.modelo.Defensas;

import edu.fiuba.algo3.modelo.Celdas.Unidad;
import edu.fiuba.algo3.modelo.Mapa.Mapa;

public class TorrePlateada extends Defensa {

    public TorrePlateada(int turnosParaConstruccion) {
        super(new EstadoConstruyendo(turnosParaConstruccion));

        //this.estadoActual = new EstadoConstruyendo(turnosParaConstruccion);
        //this.turnosParaConstruccion = turnosParaConstruccion;
    }
    public TorrePlateada() {
        this(2);
    }

    @Override
    public int costo() {
        return 20;
    }

    public int ataque(){
        return 2;
        //target.recibirAtaque(2); // hace uno de dmg
    }
    public int obtenerRango(){
        return 5;
    }

    @Override
    public void atacar(Unidad enemigo) {
        enemigo.recibirAtaque(ataque());
    }
}
