package edu.fiuba.algo3.modeloNico.Defensas;

public class EstructurasActivas{

}